use other components

--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
   },
   "dependencies": {
     "@posten-hedwig/accordion": "file:../hedwig-react-components/packages/accordion",
+    "@posten-hedwig/badge": "file:../hedwig-react-components/packages/badge",
     "@posten-hedwig/base": "file:../hedwig-react-components/packages/base",
+    "@posten-hedwig/block": "file:../hedwig-react-components/packages/block",
+    "@posten-hedwig/button": "file:../hedwig-react-components/packages/button",
+    "@posten-hedwig/container": "file:../hedwig-react-components/packages/container",
     "@posten-hedwig/core": "file:../hedwig-react-components/packages/core",
+    "@posten-hedwig/grid": "file:../hedwig-react-components/packages/grid",
+    "@posten-hedwig/infobox": "file:../hedwig-react-components/packages/infobox",
     "@remix-run/css-bundle": "1.16.1",
     "@remix-run/node": "^1.16.1",
     "@remix-run/react": "^1.16.1",
